# reactos

./: CMakeLists.txt
.github/workflows/: build.yml
base/setup/lib/: bootsup.c
base/system/userinit/: userinit.c
boot/bootdata/: hivesys.inf  livecd.ini  txtsetup.sif
boot/bootdata/bootcd/: unattend.inf
boot/freeldr/freeldr/ntldr/: winldr.c
dll/cpl/sysdm/: sysdm.c
dll/win32/setupapi/: install.c
media/inf/: usbport.inf
modules/livecd_extras/: Readme.txt  Whatsnew.rtf  startup.cmd  ultravnc.ini
ntoskrnl/: ntos.cmake
ntoskrnl/ex/: init.c
sdk/cmake/: config.cmake
win32ss/drivers/miniport/vbe/: CMakeLists.txt
xboxkrnl/: CMakeLists.txt  default.xbe  xbox.cmake
xboxkrnl/include/xbe/: xbe.h
xboxkrnl/xbe/: xbe.c
